@@ -1,3 +1,10 @@
+2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* cairomm/context.cc: fix a FIXME to match the style of
+	ScaledFont::glyph_extents since MSVC (and possibly other compilers) complain
+	when allocating an array on the stack and the size of the array is not a
+	compile-time constante
+
 2007-04-16  Hugo Vincent  <hugo.vincent@gmail.com>
 
 	* Added QuartzSurface for MacOS X (when cairo is built with Quartz support),
